syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "GrpcClientServices"; 

service ReviewService {
  rpc AddReview (AddReviewRequest) returns (AddReviewResponse);
}

message GrpcReview {
  int32 id = 1;
  int32 itemId = 2;
  int32 userId = 3;
  int32 rating = 4;
  string comment = 5;
}

message AddReviewRequest {
  GrpcReview review = 1;
}

message AddReviewResponse {
  GrpcReview review = 1;
}